# vellum

./: CLAUDE.md  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: QA-CHECKLIST.md
scripts/: smoke.sh
src/: app.ts  dialog.ts  editor.ts  files.test.ts  files.ts  find.ts  ipc.test.ts  ipc.ts  live-preview.test.ts  live-preview.ts  main.ts  overlay-scrollbar.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  recents.rs  theme.rs
