[package]
name = "md-editor"
version = "0.1.0"
description = "A lightweight, fast Typora-style markdown editor"
edition = "2021"
rust-version = "1.77"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
